--- a/app/src/main/res/layout/medicos_list.xml
+++ b/app/src/main/res/layout/medicos_list.xml
@@ -40,12 +40,22 @@
         android:layout_height="43dp"
         android:layout_marginTop="20dp"
         android:text="Médicos"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5"
         app:layout_constraintVertical_bias="0.0" />
+
+    <ListView
+        android:layout_width="411dp"
+        android:layout_height="529dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
