Adicionados Layouts novos, classes de editar paciente, medico e consulta e feita logica inicial de cadastro, e consultas.

--- a/app/src/main/res/layout/lista_tela.xml
+++ b/app/src/main/res/layout/lista_tela.xml
@@ -5,8 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageButton
+        android:id="@+id/btn_home4"
+        style="@android:style/Widget.Holo.Light.ImageButton"
+        android:layout_width="61dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="69dp"
+        android:background="#FFFF"
+        android:onClick="jumpHome"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.046"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.973"
+        app:srcCompat="@drawable/casa2" />
+
     <Button
-        android:id="@+id/btn_listar4"
+        android:id="@+id/btn_listCon"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="196dp"
         android:layout_height="44dp"
@@ -20,7 +36,7 @@
         app:layout_constraintVertical_bias="0.777" />
 
     <Button
-        android:id="@+id/btn_cadastro3"
+        android:id="@+id/btn_listMed"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="196dp"
         android:layout_height="44dp"
@@ -35,7 +51,7 @@
         app:layout_constraintVertical_bias="0.414" />
 
     <Button
-        android:id="@+id/btn_listar5"
+        android:id="@+id/btn_listPac"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="196dp"
         android:layout_height="44dp"
