--- a/app/src/main/res/layout/cadastro_tela.xml
+++ b/app/src/main/res/layout/cadastro_tela.xml
@@ -6,6 +6,22 @@
     android:layout_height="match_parent"
     android:background="#FFFF">
 
+    <ImageButton
+        android:id="@+id/btn_home5"
+        style="@android:style/Widget.Holo.Light.ImageButton"
+        android:layout_width="61dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="69dp"
+        android:background="#FFFF"
+        android:onClick="jumpHome"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.046"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.973"
+        app:srcCompat="@drawable/casa2" />
+
     <Button
         android:id="@+id/btn_CadPac"
         style="@style/Widget.AppCompat.Button.Borderless"
