--- a/app/src/main/res/layout/consultas_list.xml
+++ b/app/src/main/res/layout/consultas_list.xml
@@ -4,9 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ActivityConsultarConsultas">
 
     <ListView
+        android:id="@+id/lvConsultas"
         android:layout_width="411dp"
         android:layout_height="529dp"
         android:layout_marginTop="10dp"
