--- a/app/src/main/res/layout/medicos_list.xml
+++ b/app/src/main/res/layout/medicos_list.xml
@@ -50,6 +50,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ListView
+        android:id="@+id/lvMedicaos"
         android:layout_width="411dp"
         android:layout_height="529dp"
         android:layout_marginTop="10dp"
