--- a/app/src/main/res/layout/pacientes_list.xml
+++ b/app/src/main/res/layout/pacientes_list.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent">
 
     <ListView
+        android:id="@+id/lvPacientes"
         android:layout_width="411dp"
         android:layout_height="529dp"
         android:layout_marginTop="10dp"
