--- a/app/src/main/res/layout/tela_cadastrar_consulta.xml
+++ b/app/src/main/res/layout/tela_cadastrar_consulta.xml
@@ -38,7 +38,7 @@
             android:text="Paciente:" />
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/spPac"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -49,7 +49,7 @@
             android:text="Médico:" />
 
         <Spinner
-            android:id="@+id/spinner2"
+            android:id="@+id/spMed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -60,7 +60,7 @@
             android:text="Início da consulta:" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/etIniCOn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -74,7 +74,7 @@
             android:text="Fim da consulta:" />
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/etFimCon"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -88,7 +88,7 @@
             android:text="Observações" />
 
         <EditText
-            android:id="@+id/editText7"
+            android:id="@+id/etObs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -98,7 +98,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/Cadastrar"
+        android:id="@+id/btn_cadastrarCon"
         style="@android:style/Widget.DeviceDefault.Button.Borderless"
         android:layout_width="356dp"
         android:layout_height="41dp"
