--- a/app/src/main/res/layout/tela_cadastrar_medico.xml
+++ b/app/src/main/res/layout/tela_cadastrar_medico.xml
@@ -35,7 +35,7 @@
             android:text="Nome do Médico:" />
 
         <EditText
-            android:id="@+id/editText3"
+            android:id="@+id/etNome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -49,7 +49,7 @@
             android:text="CRM:" />
 
         <EditText
-            android:id="@+id/editText4"
+            android:id="@+id/etCRM"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -63,7 +63,7 @@
             android:text="Logradouro:" />
 
         <EditText
-            android:id="@+id/editText5"
+            android:id="@+id/etEndereco"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -77,7 +77,7 @@
             android:text="Número:" />
 
         <EditText
-            android:id="@+id/editText6"
+            android:id="@+id/etNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -91,7 +91,7 @@
             android:text="Cidade:" />
 
         <EditText
-            android:id="@+id/editText7"
+            android:id="@+id/etCidade"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -105,7 +105,7 @@
             android:text="UF:" />
 
         <EditText
-            android:id="@+id/editText8"
+            android:id="@+id/etUF"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -119,7 +119,7 @@
             android:text="Telefone Celular:" />
 
         <EditText
-            android:id="@+id/editText10"
+            android:id="@+id/etCell"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -133,7 +133,7 @@
             android:text="Telefone Fixo:" />
 
         <EditText
-            android:id="@+id/editText11"
+            android:id="@+id/etTel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -141,7 +141,7 @@
             android:text="Telefone Fixo" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btn_cadastrarMedi"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
