--- a/app/src/main/res/layout/cadastro_tela.xml
+++ b/app/src/main/res/layout/cadastro_tela.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFF">
+    android:background="#FFFF"
+    tools:context=".ActivityCadastros">
 
     <ImageButton
         android:id="@+id/btn_home5"
