--- a/app/src/main/res/layout/tela_cadastrar_consulta.xml
+++ b/app/src/main/res/layout/tela_cadastrar_consulta.xml
@@ -22,7 +22,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="411dp"
-        android:layout_height="347dp"
+        android:layout_height="332dp"
         android:layout_marginTop="7dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,7 +30,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:layout_constraintVertical_bias="0.161">
+        app:layout_constraintVertical_bias="0.15">
 
         <TextView
             android:id="@+id/textView2"
@@ -85,8 +85,7 @@
         <TextView
             android:id="@+id/textView6"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Observações" />
+            android:layout_height="wrap_content"/>
 
         <EditText
             android:id="@+id/etObs"
@@ -94,7 +93,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Observações" />
+            android:hint="Observações"/>
 
     </LinearLayout>
 
