--- a/app/src/main/res/layout/consultas_list.xml
+++ b/app/src/main/res/layout/consultas_list.xml
@@ -7,10 +7,26 @@
     android:layout_height="match_parent"
     tools:context=".ActivityConsultarConsultas">
 
+    <ImageButton
+        android:id="@+id/btn_addCon"
+        style="@android:style/Widget.Holo.Light.ImageButton"
+        android:layout_width="30dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="69dp"
+        android:background="#FFFF"
+        android:onClick="jumptoAdd"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.929"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.972"
+        app:srcCompat="@drawable/add" />
+
     <ListView
         android:id="@+id/lvConsultas"
-        android:layout_width="411dp"
-        android:layout_height="529dp"
+        android:layout_width="379dp"
+        android:layout_height="508dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
