--- a/app/src/main/res/layout/pacientes_list.xml
+++ b/app/src/main/res/layout/pacientes_list.xml
@@ -9,8 +9,8 @@
 
     <ListView
         android:id="@+id/lvPacientes"
-        android:layout_width="411dp"
-        android:layout_height="529dp"
+        android:layout_width="387dp"
+        android:layout_height="522dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,6 +33,22 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.973"
         app:srcCompat="@drawable/casa2" />
+
+    <ImageButton
+        android:id="@+id/btn_addPac"
+        style="@android:style/Widget.Holo.Light.ImageButton"
+        android:layout_width="30dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="69dp"
+        android:background="#FFFF"
+        android:onClick="jumptoAdd"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.929"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.972"
+        app:srcCompat="@drawable/add" />
 
     <ImageView
         android:id="@+id/imageView5"
